--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,7 @@ compatibility_date = "2023-05-26"
 workers_dev = true
 
 [vars]
-# PROXYIP = "211.230.110.231:50008"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea"
+PROXYIP = "106.162.242.110:443"
+UUID = "31c33b8d-5d7e-481c-9b78-921997972c21"
 # SOCKS5 = "127.0.0.1:1080"
 # SOCKS5_RELAY = "true"
